kubernetes/frontend-service/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: peerprep
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: asia-southeast1-docker.pkg.dev/peerprep-userservice-436407/peerprep/miljyy/frontend-service:latest
          ports:
            - name: fe-service
              containerPort: 3000
      imagePullSecrets:
        - name: gcr-json-key
