kubernetes/frontend-service/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: peerprep
  labels:
    app: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
    - name: fe-service
      port: 3000
      targetPort: 3000
  type: LoadBalancer # or ClusterIP for internal access
